<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="32dp"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/tvNomeProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxWidth="488dp"
        android:text="@string/label_nome_produto"
        android:textSize="18sp"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/tvDescricaoProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxWidth="488dp"
        android:text="@string/label_descricao_produto"
        android:textSize="18sp"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/tvFornecedorProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxWidth="488dp"
        android:text="@string/label_fornecedor"
        android:textSize="18sp"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/tvSetorProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxWidth="488dp"
        android:text="@string/label_setor"
        android:textSize="18sp"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/tvPrecoProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxWidth="488dp"
        android:text="@string/label_preco"
        android:textSize="18sp"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/tvQuantidadeProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxWidth="488dp"
        android:text="@string/label_quantidade"
        android:textSize="18sp"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/tvDataEntrada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxWidth="488dp"
        android:text="@string/label_data_entrada"
        android:textSize="18sp"
        android:layout_marginTop="8dp" />

</LinearLayout>
