<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etNomeProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxWidth="488dp"
        android:minHeight="48dp"
        android:hint="@string/hint_nome_produto"
        android:inputType="text"
        android:autofillHints="name"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <EditText
        android:id="@+id/etDescricaoProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxWidth="488dp"
        android:minHeight="48dp"
        android:hint="@string/hint_descricao_produto"
        android:inputType="textMultiLine"
        android:autofillHints="description"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <Spinner
        android:id="@+id/spinnerFornecedor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:importantForAutofill="no"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <EditText
        android:id="@+id/etSetorProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxWidth="488dp"
        android:minHeight="48dp"
        android:hint="@string/hint_setor_produto"
        android:inputType="text"
        android:autofillHints="organization"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <EditText
        android:id="@+id/etPrecoProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxWidth="488dp"
        android:minHeight="48dp"
        android:hint="@string/hint_preco_produto"
        android:inputType="numberDecimal"
        android:autofillHints="price"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <EditText
        android:id="@+id/etQuantidadeProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxWidth="488dp"
        android:minHeight="48dp"
        android:hint="@string/hint_quantidade_produto"
        android:inputType="number"
        android:autofillHints="quantity"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <EditText
        android:id="@+id/etDataEntrada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxWidth="488dp"
        android:minHeight="48dp"
        android:hint="@string/hint_data_entrada"
        android:inputType="date"
        android:autofillHints="date"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxWidth="320dp"
        android:minHeight="48dp"
        android:text="@string/btn_salvar"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="12dp"
        android:layout_gravity="center" />

</LinearLayout>
